--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@cesdk/cesdk-js": "^1.24.0",
+    "@cesdk/engine": "^1.24.0",
     "next": "14.2.0",
     "react": "^18",
     "react-dom": "^18"
