--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@cesdk/cesdk-js": "^1.24.0",
     "@cesdk/engine": "^1.24.0",
     "@clerk/nextjs": "^4.29.12",
+    "@imgly/background-removal": "^1.4.5",
     "next": "14.2.0",
     "react": "^18",
     "react-dom": "^18"
