refactor: auth logic

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 NEXT_PUBLIC_CESDK_LICENSE=
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
+
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/auth/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/auth/sign-up
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/editor
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/editor
