--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@cesdk/engine": "^1.24.0",
     "@clerk/nextjs": "^4.29.12",
     "@imgly/background-removal": "^1.4.5",
+    "@vercel/analytics": "^1.2.2",
     "next": "14.2.0",
     "react": "^18",
     "react-dom": "^18"
